No need for a separate contact page for now

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -13,12 +13,24 @@ layout: "default"
         I'm a <a href="about/">freelance software engineer</a> specialized in creating, refactoring or containerizing (web) applications.
     </p>
 
-    <p>
-        <a href="contact/" class="button palette-bg-salmon"><i class="fa fa-phone"></i> Contact me</a>
-    </p>
-
-    <div style="clear:both;"></div>
-
+    <ul class="contact-links">
+        <li>
+            <a href="tel:+31653593790">
+                <i class="fa fa-phone" style="color:#25d366" title="Phone / Signal"></i>
+                +31653593790
+            </a>
+        </li>
+        <li>
+            <a href="mailto:me@lucasvanlierop.nl">
+                <i class="fa fa-envelope-open" title="Mail"></i>
+                me@lucasvanlierop.nl</a>
+        </li>
+        <li>
+            <a href="https://twitter.com/lucasvanlierop">
+                <i class="fa fa-twitter" style="color:#00aced" title="Twitter"></i> @lucasvanlierop
+            </a>
+        </li>
+    </ul>
 </section>
 
 <section class="services">
