Setted a separate title for each page

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,5 +1,6 @@
 ---
 layout: "default"
+name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
 ---
 
 <section class="about-me">
