Improved services content

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -11,7 +11,8 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
     <img class="photo" src="img/me_300px.jpeg" alt="this is me"/>
 
     <p>
-        I'm a <a href="about/">freelance software engineer</a> specialized in creating, refactoring or containerizing (web) applications.
+        I'm a <a href="about/">freelance software engineer</a> specialized in creating, refactoring or containerizing
+        (web) applications.
     </p>
 
     <ul class="contact-links">
@@ -47,9 +48,7 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
             </h3>
             <p>
                 I know my way around in modern PHP and can help you with building a web application, API,
-                microservice,
-                middleware.
-                With proper documentation and tests.
+                micro service or middleware with proper documentation and tests.
             </p>
         </li>
 
@@ -60,50 +59,47 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
             </h3>
             <p>
                 Many software projects turn into legacy projects over time.
-                Reasons being the use of older, maybe even obsolete technologies. Lack of tests, close coupling.
-                When the application is still (very) valuable to your company I can help to modernize the
-                application,
-                set up a testing strategy and write documentation.
+                Reasons being the use of obsolete technologies, lack of tests, tight coupling, high complexity.
+                When the application is still (very) valuable to your company I can help to modernize the application,
+                set up a testing strategy, write documentation etc.
             </p>
         </li>
 
         <li class="block">
             <h3>
                 <i class="fa fa-server palette-petrol"></i>
-                You would like to be able to deploy any time of the day but your current setup doesn't let you
-                do that
+                You would like to be able to deploy your application at any given time but your current setup doesn't
+                let you do that
             </h3>
             <p>
                 The era of waiting hours, days or even months before deploying a new version of an application
-                to
-                production are over.
-                Current technology always us to deploy fast and often.
-                I can help preparing your application, setting up a CI server, setting up automatic deployment.
+                to production are over. Current technology always us to deploy fast and often.
+                I can help to set up continuous integration and deployment.
             </p>
         </li>
 
         <li class="block">
             <h3>
                 <i class="fa fa-ship palette-grey"></i>
-                You want to migrate your application(s) to a containerized platform
+                You often experience that your application that worked perfectly on development doesn't work in
+                production.
             </h3>
             <p>
                 Many issues with applications are caused by differences in the dev/test/production pipeline.
                 This can be prevented by making sure the stack of operating system + web server + runtime + the
                 application itself is consistent in every stage.
-                Even more than with virtual machines this can be achieved by using Linux containers.
+                Even more than with virtual machines this can be achieved by using Linux containers (Docker).
             </p>
         </li>
 
         <li class="block">
             <h3>
                 <i class="fa fa-users palette-salmon"></i>
-                You want your (junior) developers to be trained in services or coached in their working
-                process
+                You want your (junior) developers to be trained
             </h3>
             <p>
                 Junior developers are often very eager to learn and grasp knowledge.
-                I can help them to make the right choices.
+                I can help them learning about development, testing and coach them in their working process.
             </p>
         </li>
 
@@ -115,10 +111,8 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
             </h3>
 
             <p>
-                If your owner of an application and you're not sure about it's state I can do a review/audit and
-                come up
-                with
-                warn about areas that need attention, suggest improvments.
+                If own an application and you're unsure about it's quality I can do a audit and make a report about
+                possible issues, point to areas that need attention and suggest improvements.
             </p>
         </li>
     </ul>
