Add name to about page title (fixes smoke test too)

--- a/src/content/about.html
+++ b/src/content/about.html
@@ -5,7 +5,7 @@ name: "About Lucas van Lierop"
 
 <section>
     <h2>
-        About me
+        {{ page.name }}
     </h2>
 
     <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
