Updated expertise page

--- a/src/content/expertise.html
+++ b/src/content/expertise.html
@@ -75,7 +75,10 @@ name: "Lucas van Lierop's Expertise"
                     Data formats: XML/Markdown/Json
                 </li>
                 <li>
-                    I’m currently learning Scala and have also used Cobol and VB script
+                    I have also used Actionscript, Cobol, Perl and VB script.
+                </li>
+                <li>
+                    I’m currently learning Scala
                 </li>
             </ul>
         </li>
@@ -261,6 +264,20 @@ name: "Lucas van Lierop's Expertise"
                 <li>FreeBsd</li>
                 <li>Bash</li>
             </ul>
+        </li>
+
+        <li class="block">
+            <h3>
+                <i class="fa fa-microphone"></i>
+                Event organizing & public speaking
+            </h3>
+            <p>
+                Besides being engineer I'm also organizer of <a href="http://domcode.org/">DomCode</a>, a non-profit foundation with 1200+
+                members that organizes events like the annual <a href="http://conference.domcode.org">DomCode conference</a> and
+                monthly DomCode meetups where (inter)national speakers share their knowledge on
+                software development.
+                Since I value knowledge sharing a lot I became an occasional <a href="public-appearances/">speaker</a> myself.
+            </p>
         </li>
 
         <li class="block">
