--- a/src/content/index.html
+++ b/src/content/index.html
@@ -15,6 +15,10 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
         (web) applications.
     </p>
 
+    <p>
+        I'm based in Utrecht, the Netherlands but I'm open for remote work too.
+    </p>
+
     <ul class="contact-links">
         <li>
             <a href="tel:+31653593790">
