Updated front page

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -11,12 +11,8 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
     <img class="photo" src="img/me_300px.jpeg" alt="this is me"/>
 
     <p>
-        I'm a <a href="about/">freelance software engineer</a> specialized in creating, refactoring or containerizing
+        I'm a <a href="about/">freelance software engineer</a> based in Utrecht, the Netherlands. I'm specialized in creating, refactoring or containerizing
         (web) applications.
-    </p>
-
-    <p>
-        I'm based in Utrecht, the Netherlands but I'm open for remote work too.
     </p>
 
     <ul class="contact-links">
@@ -42,7 +38,7 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
 <section class="services">
     <a id="services"></a>
     <h2>
-        Let me help you:
+        What I can do for you
     </h2>
     <ul class="block-list">
         <li class="block">
