Added missing 'you'

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -111,7 +111,7 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
             </h3>
 
             <p>
-                If own an application and you're unsure about it's quality I can do a audit and make a report about
+                If you own an application and you're unsure about it's quality I can do a audit and make a report about
                 possible issues, point to areas that need attention and suggest improvements.
             </p>
         </li>
