--- a/src/content/about.html
+++ b/src/content/about.html
@@ -20,7 +20,7 @@ name: "About Lucas van Lierop"
     </p>
 
     <p>
-        Besides being engineer I'm also organizer of <a href="http://domcode.org/">DomCode</a>, a non-profit foundation with 1200+
+        Besides being an engineer I'm also organizer of <a href="http://domcode.org/">DomCode</a>, a non-profit foundation with 1200+
         members that organizes events like the annual <a href="http://conference.domcode.org">DomCode conference</a> and
         monthly DomCode meetups where (inter)national speakers share their knowledge on
         software development.
