--- a/src/content/expertise.html
+++ b/src/content/expertise.html
@@ -258,7 +258,7 @@ name: "Lucas van Lierop's Expertise"
             <ul>
                 <li>
                     Linux Alpine/Ubuntu/Debian/Centos
-                    (I know my around in Linux, I’m containerizing my desktop apps for fun.)
+                    (I know my way around in Linux, I’m containerizing my desktop apps for fun.)
                 </li>
                 <li>Windows</li>
                 <li>FreeBsd</li>
@@ -272,7 +272,7 @@ name: "Lucas van Lierop's Expertise"
                 Event organizing & public speaking
             </h3>
             <p>
-                Besides being engineer I'm also organizer of <a href="http://domcode.org/">DomCode</a>, a non-profit foundation with 1200+
+                Besides being an engineer I'm also organizer of <a href="http://domcode.org/">DomCode</a>, a non-profit foundation with 1200+
                 members that organizes events like the annual <a href="http://conference.domcode.org">DomCode conference</a> and
                 monthly DomCode meetups where (inter)national speakers share their knowledge on
                 software development.
