Fix typos and add abbr tags for abbreviations

--- a/src/content/expertise.html
+++ b/src/content/expertise.html
@@ -21,7 +21,7 @@ name: "Lucas van Lierop's Expertise"
 
                 </li>
                 <li>
-                    Unit, integraton and Functional testing: PHPunit and Behat
+                    Unit, integration and functional testing: PHPunit and Behat
 
                 </li>
                 <li>
@@ -106,23 +106,23 @@ name: "Lucas van Lierop's Expertise"
                     SOLID design
                 </li>
                 <li>
-                    TDD
+                    <abbr title="Test-driven Development">TDD</abbr>
 
                 </li>
                 <li>
-                    BDD
+                    <abbr title="Behavior-driven Development">BDD</abbr>
 
                 </li>
                 <li>
-                    DDD
+                    <abbr title="Domain-driven Design">DDD</abbr>
 
                 </li>
                 <li>
-                    CQS
+                    <abbr title="Command-query Separation">CQS</abbr>
 
                 </li>
                 <li>
-                    Studing CQRS & eventsourcing.
+                    Studying <abbr title="Command Query Responsibility Segregation">CQRS</abbr> & event sourcing.
                 </li>
             </ul>
         </li>
@@ -137,7 +137,7 @@ name: "Lucas van Lierop's Expertise"
                 <li>DC/OS, Marathon</li>
                 <li>Ansible</li>
                 <li>Vagrant</li>
-                <li>Virtualbox</li>
+                <li>VirtualBox</li>
                 <li>DigitalOcean</li>
             </ul>
         </li>
@@ -162,7 +162,7 @@ name: "Lucas van Lierop's Expertise"
             <ul>
                 <li>HTML</li>
                 <li>CSS/Less/Sass</li>
-                <li>Twitterbootstrap</li>
+                <li>Twitter Bootstrap</li>
                 <li>Gimp</li>
             </ul>
         </li>
@@ -172,7 +172,7 @@ name: "Lucas van Lierop's Expertise"
                 Quality Assurance and build tools
             </h3>
             <ul>
-                <li>Travis-CI</li>
+                <li>Travis CI</li>
                 <li>Bamboo</li>
                 <li>Ant</li>
                 <li>Make</li>
@@ -212,7 +212,7 @@ name: "Lucas van Lierop's Expertise"
                 Messaging & job queues
             </h3>
             <ul>
-                <li>RabbitMq</li>
+                <li>RabbitMQ</li>
                 <li>Beanstalk</li>
             </ul>
         </li>
@@ -223,7 +223,7 @@ name: "Lucas van Lierop's Expertise"
                 Certificates
             </h3>
             <ul>
-                <li>ZCE</li>
+                <li><abbr title="Zend Certified Engineer">ZCE</abbr></li>
             </ul>
         </li>
 
@@ -261,7 +261,7 @@ name: "Lucas van Lierop's Expertise"
                     (I know my way around in Linux, I’m containerizing my desktop apps for fun.)
                 </li>
                 <li>Windows</li>
-                <li>FreeBsd</li>
+                <li>FreeBSD</li>
                 <li>Bash</li>
             </ul>
         </li>
