--- a/src/content/work.html
+++ b/src/content/work.html
@@ -24,7 +24,7 @@ name: "Lucas van Lierop's work"
                 I helped them to build a (mobile) web shop as well.
             </p>
             <p>
-                Furthermore I have worked on carving out parts of their application to micro services and connecting them via HTTP API's
+                Furthermore I have worked on carving out parts of their application to micro services and connecting them via HTTP APIs
                 and message queues controlled by a central process manager and setting up a (OAuth 2 based) single sign on solution
                 for authentication between all services and the existing platform
                 applications. I have initiated the use of (Docker) containers which is now broadly adopted for production usage
@@ -47,7 +47,7 @@ name: "Lucas van Lierop's work"
             <h3>Verzekeringssite.nl (now Hoyhoy.nl) (at Ibuildings.nl)</h3>
             <p>
                 Verzekeringssite.nl offers comparing and taking insurance policies.
-                As part of the team at Verzekeringssite I developed a service that aggregated data retrieved from 3rd party API's
+                As part of the team at Verzekeringssite I developed a service that aggregated data retrieved from 3rd party APIs
                 and calculated the most suitable insurance policies based on user input in realtime.
             </p>
         </li>
