--- a/src/content/index.html
+++ b/src/content/index.html
@@ -32,6 +32,9 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
                 <i class="fa fa-twitter" style="color:#00aced" title="Twitter"></i> @lucasvanlierop
             </a>
         </li>
+        <li>
+            <i class="fa fa-certificate" style="color:grey" title="Chamber of commerce number"></i> Kvk nr. 67502423
+        </li>
     </ul>
 </section>
 
