Added recent/upcoming talks

--- a/src/content/public-appearances.html
+++ b/src/content/public-appearances.html
@@ -19,6 +19,26 @@ name: "Talks and workshops by Lucas van Lierop"
         <li class="block">
             <h3>
                 <i class="fa fa-microphone palette-grey"></i>
+                2017, March 22
+            </h3>
+            <p>
+                Talk: "Running Linux Desktop Applications in Containers 101" at:
+                <a href="https://www.meetup.com/DigitalOceanAmsterdam/events/236671535/">Digital Ocean Meetup Amsterdam</a>
+            </p>
+        </li>
+        <li class="block">
+            <h3>
+                <i class="fa fa-microphone palette-grey"></i>
+                2017, March 10
+            </h3>
+            <p>
+                Talk: "Containerize your application using Docker while standing on the shoulders of giants instead of cowboys" at:
+                <a href="https://sessions.typo3campvenlo.nl/">TYPO3camp Venlo</a>
+            </p>
+        </li>
+        <li class="block">
+            <h3>
+                <i class="fa fa-microphone palette-grey"></i>
                 2016, October 25
             </h3>
             <p>
