First attempt to migrate to sculpin

--- a/source/about.html
+++ b/source/about.html
@@ -8,7 +8,7 @@ name: "About Lucas van Lierop"
         {{ page.name }}
     </h2>
 
-    <img class="photo" src="img/me-small.jpeg" alt="this is me"/>
+    <img class="photo" src="images/me-small.jpeg" alt="this is me"/>
 
     <p>
         I'm Lucas, a freelance software engineer, working professionaly since 2004.
