--- a/source/expertise.html
+++ b/source/expertise.html
@@ -17,7 +17,7 @@ name: "Lucas van Lierop's Expertise"
             </h3>
             <ul>
                 <li>
-                    Frameworks: Symfony Framework 2/3, Zend Framework 1, Spress
+                    Frameworks: Symfony Framework 2/3, Zend Framework 1, Sculpin
 
                 </li>
                 <li>
