--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
 
     <h2>About me</h2>
 
-    <img class="photo" src="img/me_300px.jpeg" alt="this is me"/>
+    <img class="photo" src="images/me_300px.jpeg" alt="this is me"/>
 
     <p>
         I'm a <a href="about/">freelance software engineer</a> based in Utrecht, the Netherlands. I'm specialized in creating, refactoring or containerizing
