--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,6 @@
 ---
 layout: "default"
-name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
+name: "Lucas van Lierop, freelance software developer #php #symfony #docker"
 ---
 
 <section class="about-me">
@@ -11,7 +11,7 @@ name: "Lucas van Lierop, freelance software engineer #php #symfony #docker"
     <img class="photo" src="images/me_300px.jpeg" alt="this is me"/>
 
     <p>
-        I'm a <a href="about/">freelance software engineer</a> based in Utrecht, the Netherlands. I'm specialized in creating, refactoring or containerizing
+        I'm a <a href="about/">freelance software developer</a> based in Utrecht, the Netherlands. I'm specialized in creating, refactoring or containerizing
         (web) applications.
     </p>
 
