--- a/source/about.html
+++ b/source/about.html
@@ -11,7 +11,7 @@ name: "About Lucas van Lierop"
     <img class="photo" src="images/me-small.jpeg" alt="this is me"/>
 
     <p>
-        I'm Lucas, a freelance software engineer, working professionaly since 2004.
+        I'm Lucas, a freelance software developer, working professionaly since 2004.
         My goal is to build well designed, well tested and properly documented applications that exceed your expectations.
     </p>
 
