--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,7 @@ name: "Lucas van Lierop, freelance software developer #php #symfony #docker"
     <img class="photo" src="images/me_300px.jpeg" alt="this is me"/>
 
     <p>
-        I'm a <a href="about/">freelance software developer</a> based in Utrecht, the Netherlands. I'm specialized in creating, refactoring or containerizing
+        I'm a <a href="about/">freelance software developer</a> based in Utrecht, the Netherlands. I'm specialized in creating, refactoring and containerizing
         (web) applications.
     </p>
 
