--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -47,11 +47,9 @@
 {% if site.disqus.shortname and site.disqus.shortname != '' %}
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = '{{site.disqus.shortname}}'; // required: replace example with your forum shortname
+    var disqus_shortname = '{{site.disqus.shortname}}';
 
-
-    {% if page.disqus.identifier  %}var disqus_identifier = '{{page.disqus.identifier}}'; {% endif %}
+    {% if page.disqus.identifier %}var disqus_identifier = '{{page.disqus.identifier}}'; {% endif %}
 
     {% if page.disqus.title %}var disqus_title = '{{page.disqus.title}}';{% endif %}
 
