--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -7,7 +7,7 @@
 {% block content_wrapper %}
     <article>
         <header>
-            <h2>{{ page.title }} <small>post</small></h2>
+            <h1>{{ page.title }}</h1>
         </header>
         <div>
             {{ page.blocks.content|raw }}
@@ -42,7 +42,6 @@
             </nav>
         {% endif %}
     </article>
-
 
 {% if site.disqus.shortname and site.disqus.shortname != '' %}
 <div id="disqus_thread"></div>
