--- a/source/index.html
+++ b/source/index.html
@@ -46,7 +46,7 @@ use:
 
 <section class="services">
     <a id="services"></a>
-    <h2>
+    <h2 class="palette-petrol">
         What I can do for you
     </h2>
     <ul class="block-list">
