--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -7,7 +7,7 @@
 {% block content_wrapper %}
     <article>
         <header>
-            <h1>{{ page.title }}</h1>
+            <h1 class="palette-petrol">{{ page.title }}</h1>
         </header>
         <div>
             {{ page.blocks.content|raw }}
