Show colorized icon in front of each blog article link

--- a/source/index.html
+++ b/source/index.html
@@ -136,7 +136,7 @@ use:
     {% for post in page.pagination.items %}
     <article class="block">
         <h3>
-            <i class="fa palette-salmon"></i>
+            <i class="fa fa-pencil-square palette-petrol"></i>
             <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
         </h3>
         {% if post.meta.tags %}
