Adds link to other projects with Tesla batteries

--- a/source/electric-land-rover.html
+++ b/source/electric-land-rover.html
@@ -71,3 +71,9 @@ The rest of the driveline stay the same and I'll be [keeping the gearbox]() albe
     <!--</nav>-->
     <!--{% endif %}-->
 <!--</div>-->
+
+
+Other people using Tesla Model S batteries:
+- http://evbimmer325i.blogspot.nl/2017/06/tesla-battery-pack-bus-bar-steel.html?m=1
+- http://www.diyelectriccar.com/forums/showthread.php?t=177489
+- https://www.oudevolvo.nl/ev-combi/
