--- a/source/index.html
+++ b/source/index.html
@@ -132,11 +132,11 @@ use:
     <h2>
         Latest blogposts
     </h2>
-    
+
     {% for post in page.pagination.items %}
     <article class="block">
         <h3>
-            <i class="fa fa-pencil-square palette-petrol"></i>
+            <div class="image" style="background-image:url('{{ post.image }}');"></div>
             <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
         </h3>
         {% if post.meta.tags %}
