No divs should occur in header

--- a/source/blog.html
+++ b/source/blog.html
@@ -30,7 +30,7 @@ use:
 {% endif %}
 <article class="block">
     <h3>
-        <div class="image" style="background-image:url('{{ post.image }}');"></div>
+        <span class="image" style="background-image:url('{{ post.image }}');"></span>
         <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
     </h3>
 
