--- a/source/index.html
+++ b/source/index.html
@@ -136,7 +136,7 @@ use:
     {% for post in page.pagination.items %}
     <article class="block">
         <h3>
-            <div class="image" style="background-image:url('{{ post.image }}');"></div>
+            <span class="image" style="background-image:url('{{ post.image }}');"></span>
             <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
         </h3>
         {% if post.meta.tags %}
