--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -6,7 +6,11 @@
     <meta name="twitter:card" content="{{ page.title }}" />
     <meta name="twitter:site" content="@lucasvanlierop" />
     <meta name="twitter:creator" content="@lucasvanlierop" />
+    <meta name="twitter:title" content="{{ page.title }}" />
+    <meta name="twitter:image" content="{{ site.url }}{{ page.image }}" />
     <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="article" />
     <meta property="og:title" content="{{ page.title }}" />
     <meta property="og:image" content="{{ site.url }}{{ page.image }}" />
 {% endblock %}
