Twitter card should be a type

--- a/source/_views/post.html
+++ b/source/_views/post.html
@@ -3,7 +3,7 @@
 {% block head_meta %}
     <meta name="description" content="{{ page.title }} by Lucas van Lierop freelance software developer" />
     <meta name="robots" content="index, follow">
-    <meta name="twitter:card" content="{{ page.title }}" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lucasvanlierop" />
     <meta name="twitter:creator" content="@lucasvanlierop" />
     <meta name="twitter:title" content="{{ page.title }}" />
